# data-5600

./: .gitignore  README.md  README.qmd  _quarto.yml  pyproject.toml
announcements/: week-01.qmd  week-02.qmd  week-03.qmd  week-04.qmd  week-05.qmd  week-06.qmd  week-07.qmd  week-08.qmd  week-09.qmd  week-10.qmd  week-11.qmd  week-12.qmd
assignments/: random-draw.py
cases/: case-01.md  case-01.qmd
code/: assumption-notes.qmd
data/: X_df.parquet  leads.parquet  loyalty.parquet  original_df.parquet  original_leads.parquet  raw_df.parquet  soft_launch.parquet
notes/: notes.md  notes.qmd
slides/: slides.scss  style.scss
slides/01_regression-ml/: 01_regression-ml.qmd  case-01.qmd
slides/02_modeling-workflow/: 02_modeling-workflow.qmd
topics/00_decision-science/: 00_decision-science.qmd
topics/00_huntsman-scholars/: 00_huntsman-scholars.qmd
topics/01_regression-ml/: 01_regression-ml.qmd  README.md  README.qmd
topics/02_modeling-workflow/: 02_modeling-workflow.qmd  README.md  README.qmd
topics/03_decisions-data/: 03_decisions-data.qmd  README.md  README.qmd
topics/04_probability-statistics/: 04_probability-statistics.qmd  README.md  README.qmd
topics/05_linear-models/: 05_linear-models.qmd  README.md  README.qmd
topics/05_linear-regression/: 05_linear-regression.qmd
topics/06_diagnostics-remedies-01/: 06_diagnostics-remedies-01.qmd  README.md  README.qmd
topics/06_exploration-transformation/: 06_exploration-transformation.qmd  README.qmd
topics/06_validity-representativeness-linearity/: 06_validity-representativeness-linearity.qmd  README.md  (+1 more)
(+64 files in other folders)
