[project]
name = "project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bambi>=0.15.0",
    "jupyter>=1.1.1",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
